apps/playground/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-ingress
  namespace: ai-lab
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - zyklab.me
    secretName: ai-frontend-tls
  rules:
  - host: zyklab.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ai-frontend-service
            port:
              number: 80
